roles/servers/files/10.32.16.241/iptables
# Firewall configuration written by system-config-firewall
# Manual customization of this file is not recommended.
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
:LOGGING - [0:0]

#default policy for input
-A INPUT -i lo -j ACCEPT
-A INPUT -i eth0 -p tcp -m state --state ESTABLISHED,RELATED -j ACCEPT
-A INPUT -i eth0 -p udp -m state --state ESTABLISHED,RELATED -j ACCEPT

# Allow incoming and outgoing ssh
-A INPUT -i eth0 -p tcp -s 10.32.16.64/26 --dport 22 -m state --state NEW -j ACCEPT
-A INPUT -i eth0 -p tcp -s 10.32.5.0/24 --dport 22 -m state --state NEW -j ACCEPT
-A INPUT -i eth0 -p tcp -s 10.32.16.3 --dport 22 -m state --state NEW -j ACCEPT
-A INPUT -i eth0 -p tcp -s 10.32.16.179 --dport 22 -m state --state NEW -j ACCEPT
-A INPUT -i eth0 -p tcp -s 10.32.16.180 --dport 22 -m state --state NEW -j ACCEPT
-A INPUT -i eth0 -p tcp -s 10.32.100.25 --dport 22 -m state --state NEW -j ACCEPT
-A INPUT -i eth0 -p tcp -s 10.32.100.18 --dport 22 -m state --state NEW -j ACCEPT
-A OUTPUT -o eth0 -p tcp --dport 22 -m state --state NEW -j ACCEPT

#Allow incoming/outgoing ICMP
-A INPUT -i eth0 -p icmp -m limit --limit 2/min --limit-burst 5 -j ACCEPT
-A OUTPUT -o eth0 -p icmp -m state --state NEW,ESTABLISHED -j ACCEPT

#Allow incoming/outgoing HTTP/S access
-A INPUT -i eth0 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -i eth0 -p tcp -m tcp --dport 443 -j ACCEPT
-A OUTPUT -o eth0 -p tcp -d 10.32.15.190 --dport 80 -m state --state NEW -j ACCEPT
-A OUTPUT -o eth0 -p tcp -d 10.32.10.11 --dport 80 -m state --state NEW -j ACCEPT

#Allow incoming monit monitoring access
-A INPUT -i eth0 -p tcp -s 10.32.16.64/26 --dport 2812 -m state --state NEW -j ACCEPT
-A INPUT -i eth0 -p tcp -s 10.32.5.0/24 --dport 2812 -m state --state NEW -j ACCEPT


#Allow incoming/outgoing munin-node monitoring using stunnel access
-A INPUT -i eth0 -p tcp -s 10.32.16.179 --dport 4949 -m state --state NEW -j ACCEPT

#Allow incoming SNMP request
-A INPUT -i eth0 -p udp -s 10.32.16.179 --dport 161 -m state --state NEW -j ACCEPT
-A INPUT -i eth0 -p udp -s 10.32.16.180 --dport 161 -m state --state NEW -j ACCEPT

#Allow ldaps request
-A INPUT -i eth0 -p tcp -m tcp --dport 636 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -i eth0 -p tcp -m tcp --dport 389 -m state --state NEW,ESTABLISHED -j ACCEPT

#Allow samba request
-A INPUT -i eth0 -p tcp -m tcp --dport 139 -j ACCEPT
-A INPUT -i eth0 -p tcp -m tcp --dport 464 -j ACCEPT
-A INPUT -i eth0 -p tcp -m tcp --dport 749 -j ACCEPT
-A INPUT -i eth0 -p tcp -m tcp --dport 631 -j ACCEPT
-A INPUT -i eth0 -p tcp -m tcp --dport 88  -j ACCEPT
-A INPUT -i eth0 -p tcp -m tcp --dport 445 -j ACCEPT

# testing bandwith, using port 31337

-A INPUT -i eth0 -p tcp -m tcp --dport 31337 -j ACCEPT

#Allow access DNS server and NTP and SYSLOG-NG and Samhain
-A OUTPUT -o eth0 -p udp -d 10.32.10.54 --dport 53 -m state --state NEW -j ACCEPT
-A OUTPUT -o eth0 -p udp -d 10.32.10.53 --dport 123 -m state --state NEW -j ACCEPT
-A OUTPUT -o eth0 -p tcp -d 10.32.100.18 --dport 11 -m state --state NEW -j ACCEPT
-A OUTPUT -o eth0 -p tcp -d 10.32.100.18 --dport 49777 -m state --state NEW -j ACCEPT

#Allow access SMTP
-A OUTPUT -o eth0 -p tcp -d 10.32.10.11 --dport 25 -m state --state NEW -j ACCEPT


#default policy for output
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -o eth0 -p tcp -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -o eth0 -p udp -m state --state NEW,ESTABLISHED -j ACCEPT

#default policy for LOGGING
-A INPUT -j LOGGING
-A LOGGING -m limit --limit 5/min -j LOG --log-prefix "IPTables Packet Dropped: " --log-level 5
-A LOGGING -j DROP

COMMIT
